--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,10 @@
     "baseUrl": ".",
     "paths": {
       "components": ["components/*"],
-      "assets": ["assets/*"]
+      "assets": ["assets/*"],
+      "states": ["states/*"],
+      "types": ["types/*"],
+      "hooks": ["hooks"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
