--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.5",
+    "firebase": "^10.12.2",
     "formik": "^2.4.6",
     "next": "14.1.0",
     "react": "^18",
