--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "yarn prettier . --write"
+    "format": "yarn prettier . --write",
+    "cy:run": "cypress open"
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@preline/remove-element": "^2.3.0",
     "@reduxjs/toolkit": "^2.2.5",
     "firebase": "^10.12.2",
     "formik": "^2.4.6",
     "next": "14.1.0",
+    "preline": "^2.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-quill": "^2.0.0",
@@ -28,11 +31,14 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "cypress": "^13.10.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-plugin-cypress": "^3.3.0",
     "postcss": "^8",
     "prettier": "3.2.5",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5",
+    "webpack": "^5.91.0"
   }
 }
