--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-cypress": "^3.3.0",
+    "next-public": "^0.5.0",
     "postcss": "^8",
     "prettier": "3.2.5",
     "tailwindcss": "^3.4.3",
