--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "firebase-messaging-sw.js"
+    "global.d.ts"
   ],
   "exclude": ["node_modules"]
 }
